yamls/nginx.calico.ipaddr.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: default
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
      annotations:
        "cni.projectcalico.org/ipAddrs": "[\"192.168.0.1\"]"
        "ATTENTION": "only one ipv4 addr can be assigned"
    spec:
      containers:
      - name: nginx
        image: local.harbor.io/library/nginx:1.15
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
  namespace: default
spec:
  ports:
  - name: tcp8080
    targetPort: 80
    port: 8080
  selector:
    app: nginx
