yamls/networkpolicy-test1.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: test1
spec:
  podSelector:
    {}
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            name: test1
      - podSelector:
          {}
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            name: test1
      - podSelector:
          {}
